--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
-{
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "has": [
-        {
-          "type": "header",
-          "key": "referer",
-          "value": ".*facebook\\.com.*"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <!-- This meta tag will redirect all visitors after 5 seconds -->
+    <meta http-equiv="refresh" content="5;url=https://your-main-link.com">
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f5f5f5;
+            text-align: center;
         }
-      ],
-      "destination": "https://jeevanbeema.in/",
-      "permanent": false
-    }
-  ]
-}
+        .container {
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+            margin-bottom: 20px;
+        }
+        .loader {
+            width: 48px;
+            height: 48px;
+            border: 5px solid #f3f3f3;
+            border-bottom-color: #3498db;
+            border-radius: 50%;
+            margin: 20px auto;
+            animation: rotation 1s linear infinite;
+        }
+        @keyframes rotation {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .countdown {
+            font-size: 24px;
+            font-weight: bold;
+            color: #3498db;
+            margin: 15px 0;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Redirecting you...</h1>
+        <div class="loader"></div>
+        <div class="countdown">5</div>
+        <p>You will be redirected to our main page in 3 seconds.</p>
+        <p>If you are not redirected automatically, <a href="https://jeevanbeema.in/">click here</a>.</p>
+    </div>
+</body>
+</html>
