--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <!-- This meta tag will redirect all visitors after 5 seconds -->
-    <meta http-equiv="refresh" content="5;url=https://your-main-link.com">
+    <!-- This meta tag will redirect all visitors after 2 seconds -->
+    <meta http-equiv="refresh" content="2;url=https://jeevanbeema.in/">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
