--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting</title>
-    <!-- This meta tag will redirect immediately (0 seconds) -->
-    <meta http-equiv="refresh" content="0;url=https://jeevanbeema.in/">
+    <!-- This meta tag will redirect after 2 seconds -->
+    <meta http-equiv="refresh" content="2;url=https://facebook.com">
     <style>
         body {
             margin: 0;
